infrastructure/blocky/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blocky
  namespace: blocky
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blocky
  template:
    metadata:
      labels:
        app: blocky
        app.kubernetes.io/name: blocky
    spec:
      containers:
        - name: blocky
          image: spx01/blocky:latest
          ports:
            - containerPort: 80
              protocol: TCP
            - containerPort: 53
              protocol: UDP
            - containerPort: 53
              protocol: TCP
          volumeMounts:
            - name: config-volume
              mountPath: /app/config.yml
              subPath: config.yml
              readOnly: true
      volumes:
        - name: config-volume
          configMap:
            name: blocky-config
