infrastructure/blocky/loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky-dns
  namespace: blocky
spec:
  type: LoadBalancer
  selector:
    app: blocky
  externalIPs:
    - 192.168.1.200
  ports:
    - name: dns-udp
      port: 53
      protocol: UDP
    - name: dns-tcp
      port: 53
      protocol: TCP
