infrastructure/blocky/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: blocky
  namespace: blocky
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: blocky
  ports:
    - port: 80
      targetPort: 80
      name: http
